# moniker

./: .travis.yml  Cargo.toml  README.md
moniker/: Cargo.toml
moniker-derive/: Cargo.toml  README.md
moniker-derive/src/: lib.rs
moniker/examples/: lc.rs  lc_let.rs  lc_letrec.rs  lc_multi.rs  lc_nest.rs  lc_rec.rs  stlc.rs  stlc_data.rs  stlc_data_isorec.rs
moniker/src/: binder.rs  bound.rs  bound_pattern.rs  bound_term.rs  bound_var.rs  embed.rs  free_var.rs  ignore.rs  lib.rs  macros.rs  multi.rs  nest.rs  rec.rs  scope.rs  subst.rs  unique_id.rs  var.rs
moniker/src/bound/: codespan.rs  im.rs  mod.rs  num_bigint.rs
nameless/: Cargo.toml
nameless-derive/: Cargo.toml  README.md
nameless-derive/src/: lib.rs
nameless/examples/: lambda.rs  lambda_ann.rs  lambda_multi.rs  lc.rs  lc_multi.rs  lc_nest.rs  lc_rec.rs  stlc.rs
nameless/src/: alpha_eq.rs  bind.rs  binder.rs  bound.rs  bound_pattern.rs  bound_term.rs  embed.rs  gen_id.rs  ignore.rs  lib.rs  multi.rs  name.rs  named.rs  nest.rs  pattern.rs  rebind.rs  rec.rs  scope.rs  term.rs  var.rs
tools/: publish
