[package]
name = "moniker-derive"
version = "0.2.2"
readme = "./README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Derives for the moniker crate"
homepage = "https://github.com/brendanzab/moniker"
repository = "https://github.com/brendanzab/moniker"
documentation = "https://docs.rs/moniker-derive"
keywords = [
    "alpha-equivalence",
    "debruijn-indices",
    "variable-binding",
    "locally-nameless",
]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.9"
quote = "0.6.3"
syn = "0.14.4"
synstructure = "0.9.0"
