[package]
name = "moniker"
version = "0.1.0"
readme = "../README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Automatically derive variable binding and alpha equivalence for abstract syntax trees"
homepage = "https://github.com/brendanzab/moniker"
repository = "https://github.com/brendanzab/moniker"
keywords = [
    "alpha equivalence",
    "ast",
    "binding",
    "debruijn indices",
    "locally nameless",
    "variable binding",
]
categories = ["data-structures"]
publish = false

[features]
default = ["moniker-derive"]

[dependencies]
lazy_static = "1.0"
moniker-derive = { path = "../moniker-derive", version = "0.1.0", optional = true }
proptest = { version = "0.8.3", optional = true }
codespan = { version = "0.1.2", optional = true }

[dev-dependencies]
im = "10.2"
proptest = "0.8.3"

[[example]]
name = "lc"
required-features = ["moniker-derive"]

[[example]]
name = "lc_let"
required-features = ["moniker-derive"]

[[example]]
name = "lc_letrec"
required-features = ["moniker-derive"]

[[example]]
name = "lc_multi"
required-features = ["moniker-derive"]

[[example]]
name = "stlc"
required-features = ["moniker-derive", "proptest"]

[[example]]
name = "stlc_data"
required-features = ["moniker-derive"]

[[example]]
name = "stlc_data_isorec"
required-features = ["moniker-derive"]
