[package]
name = "moniker"
version = "0.4.0"
readme = "../README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Automatically derive variable binding and alpha equivalence for abstract syntax trees"
homepage = "https://github.com/brendanzab/moniker"
repository = "https://github.com/brendanzab/moniker"
documentation = "https://docs.rs/moniker"
keywords = [
    "alpha-equivalence",
    "debruijn-indices",
    "variable-binding",
    "locally-nameless",
]
categories = ["data-structures"]

    [package.metadata.docs.rs]
    features = [
        "codespan",
        "im",
        "moniker-derive",
        "num-bigint",
    ]
    all-features = true

[features]
default = ["moniker-derive"]

[dependencies]
lazy_static = "1.0"
moniker-derive = { path = "../moniker-derive", version = "0.4.0", optional = true }

# Optional impls
codespan = { version = "0.1.2", optional = true }
im = { version = "11.0.0", optional = true }
num-bigint = { version = "0.2.0", optional = true }

[dev-dependencies]
im = "11.0.0"

[[example]]
name = "lc"
required-features = ["moniker-derive"]

[[example]]
name = "lc_let"
required-features = ["moniker-derive"]

[[example]]
name = "lc_letrec"
required-features = ["moniker-derive"]

[[example]]
name = "lc_multi"
required-features = ["moniker-derive"]

[[example]]
name = "stlc"
required-features = ["moniker-derive"]

[[example]]
name = "stlc_data"
required-features = ["moniker-derive"]

[[example]]
name = "stlc_data_isorec"
required-features = ["moniker-derive"]
