[package]
name = "nameless-derive"
version = "0.1.0"
readme = "./README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Derives for the nameless crate"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "0.4"
syn = "0.12"
synstructure = "0.7"
