[package]
name = "nameless-derive"
version = "0.1.0"
readme = "./README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Derives for the nameless crate"
homepage = "https://github.com/brendanzab/nameless"
repository = "https://github.com/brendanzab/nameless"
keywords = [
    "alpha equivalence",
    "ast",
    "binding",
    "debruijn indices",
    "locally nameless",
    "variable binding",
]
categories = ["data-structures"]
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "0.5.1"
syn = "0.13.1"
synstructure = "0.8.1"
