[package]
name = "nameless"
version = "0.1.0"
readme = "../README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Automatically derive variable binding and alpha equivalence for abstract syntax trees"
homepage = "https://github.com/brendanzab/nameless"
repository = "https://github.com/brendanzab/nameless"
keywords = [
    "alpha equivalence",
    "ast",
    "binding",
    "debruijn indices",
    "locally nameless",
    "variable binding",
]
categories = ["data-structures"]
publish = false

[features]
default = ["nameless-derive"]

[dependencies]
nameless-derive = { path = "../nameless-derive", version = "0.1.0", optional = true }
